--- a/en/vtool.html
+++ b/en/vtool.html
@@ -27,11 +27,12 @@
     <div class="jumbotron">
         <p><img src="../images/vtool/logo.png" style="width: 120px;" /></p>
         <h1>vTool<br><em>Version 1.0</em></h1>
-        <p class="greenbig"><em>The small GUI frontend of FFmpeg for macOS.</em></p>
-        <p class="lead">A small GUI frontend of <a href="https://ffmpeg.org" target="_blank">FFmpeg</a> for macOS. <b>vTool</b> is a small util developed to help end user deal with all kinds of video files in daily life easy and simple. With help of it, extract audio from video, scale video, crop video, merge multiple viedo files together and more, such common video handling tasks vTool only requires you several clicks. vTool can handle common video files including MP4, M4V, MOV, MKV, AVI, VP8, VP9, MPG, and GIF etc, and common audio formats such as MP2, MP3, Ogg, AAC, Opus, Speex, AMR, GSM, Wavpack, and WAV etc. </p>
+        <p class="greenbig"><em>The small video manipulating tool.</em></p>
+        <p class="lead">A small GUI frontend of <a href="https://ffmpeg.org" target="_blank">FFmpeg</a> for macOS. <b>vTool</b> is a small util developed to help end user deal with all kinds of video files in daily life easy and simple. With help of it, extract audio from video, scale video, crop video, merge multiple video files together, and more such common video handling tasks, can be accomplished by several clicks. vTool can handle common video files including MP4, M4V, MOV, MKV, AVI, VP8, VP9, MPG, and GIF etc, and common audio formats such as MP2, MP3, Ogg, AAC, Opus, Speex, AMR, GSM, Wavpack, and WAV etc.</p>
     </div>
 
 <p class="greenbig">It's free!</p>
+
 
 <h2>Common Video Manipulating Tasks</h2>
 <p><ul>
@@ -59,7 +60,7 @@
 
 
 <h2>Flexbility of vTool</h2>
-<p>vTool developed as a simple wrapper of the excellent video handling library - FFmpeg, it can handle arbiregate commands that FFmpeg supported.
+<p>vTool developed as a simple wrapper of the excellent video handling library - <a href="https://ffmpeg.org" target="_blank">FFmpeg</a>, it can handle arbiregate commands that FFmpeg supported.
 </p>
 
 
