--- a/en/vtool.html
+++ b/en/vtool.html
@@ -23,6 +23,7 @@
 <body>
 
 
+
 <div class="container-fluid">
     <div class="jumbotron">
         <p><img src="../images/vtool/logo.png" style="width: 120px;" /></p>
@@ -56,7 +57,7 @@
 
 
 <h2>Flexbility of vTool</h2>
-<p>vTool developed as a simple wrapper of the excellent video handling library - <a href="https://ffmpeg.org" target="_blank">FFmpeg</a>, it can handle arbiregate commands that FFmpeg supported.
+<p>vTool developed as a simple wrapper of the excellent video handling library - <a href="https://ffmpeg.org" target="_blank">FFmpeg</a>, it can handle arbitrary commands that FFmpeg supported.
 </p>
 
 
