--- a/en/sounler.html
+++ b/en/sounler.html
@@ -28,7 +28,7 @@
         <p><img src="../images/sounler/logo.png" style="width: 120px;" /></p>
         <h1>Sounler<br><em>Version 1.3</em></h1>
         <p class="greenbig"><em>The small audio player for chiptune.</em></p>
-        <p class="lead">A small chiptune player for all home computers. <b>Sounler</b> is a small audio player originally developed to play various of audio format from popular arcade games and video games in later 80s and early 90s, i.e. the golden legend era. Sounler especially developed for chiptune, a.k.a video game music, so it supports almost all kinds of audio file format exists in NES(Famicom), SNES, GBA, N64, PSX, PS2, PSP, SMD, XBOX, GAMECUBE, WII, NDS, 3DS and DOS etc. It's also a powerful util used to classify and organise audio file by Game, Movie, Category, Platform, Genre, Album, Artist, and other metadata of audio file. Sounler can not only playback almost all kinds of popular golden era audio formats such as SPC, NSF, PSF, VGM, XM, MSX etc, but also supports mordern common mostly used audio file formats on Unix, Linux, macOS and Windows, e.g, MP3, Ogg, AAC/M4A, WMA, FLAC, etc. Sounler help you organise large amount of audio resources by Game, Movie or Vendor in a very flexible way, and has completely control to define any type of metadata fields for management of classification and audio file organisation. Sounler also can be simply used to convert audio file format or reset metadata of audio files.</p>
+        <p class="lead">The designedly small util for audio file classification and organisation. A small chiptune player for all classic home computers. <b>Sounler</b> is a small audio player originally developed to play various of audio format from popular arcade games and video games in later 80s and early 90s, i.e. the golden legend era. Sounler especially developed for chiptune, a.k.a video game music, so it supports almost all kinds of audio file format exists in NES(Famicom), SNES, GBA, N64, PSX, PS2, PSP, SMD, XBOX, GAMECUBE, WII, NDS, 3DS and DOS etc. It's also a powerful util used to classify and organise audio file by Game, Movie, Category, Platform, Genre, Album, Artist, and other metadata of audio file. Sounler can not only playback almost all kinds of popular golden era audio formats such as SPC, NSF, PSF, VGM, XM, MSX etc, but also supports mordern common mostly used audio file formats on Unix, Linux, macOS and Windows, e.g, MP3, Ogg, AAC/M4A, WMA, FLAC, etc. Sounler help you organise large amount of audio resources by Game, Movie or Vendor in a very flexible way, and has completely control to define any type of metadata fields for <b>management of classification and audio file organisation</b>. Sounler also can be simply used to convert audio file format or reset metadata of audio files.</p>
     </div>
 
 
@@ -70,8 +70,8 @@
 <p>
 <lt>Deal with AAC audio files on Mac:</lt> Sounler is also an AAC Converter, AAC to WAV Decoder and WAV to AAC Encoder.<br>
 <lt>Deal with MP3 audio files on Mac:</lt> Sounler is also a MP3 Converter, MP3 to WAV Decoder and WAV to MP3 Encoder.<br>
-<lt>Deal with Linux audio on Mac:</lt> Sounler is also an Ogg Converter, Ogg to WAV Decoder and WAV to Ogg Encoder.<br>
-<lt>Deal with Windows audio on Mac:</lt> Sounler is also a WMA Converter, WMA to WAV Decoder and WAV to WMA Encoder.<br>
+<lt>Deal with Linux audio on Mac:</lt> Sounler is also an Ogg Converter, Ogg to MP3 Converter and MP3 to Ogg Encoder.<br>
+<lt>Deal with Windows audio on Mac:</lt> Sounler is also a WMA Converter, WMA to MP3 Converter and MP3 to WMA Encoder.<br>
 <lt>Sounler can convert almost any audio file to MP3, Ogg, AAC and WAV audio file format.</lt><br>
 </p>
 
