--- a/en/apps.html
+++ b/en/apps.html
@@ -34,6 +34,13 @@
     </div>
     
 <div class="row">
+
+<div class="col-md-4">
+<p><a href="sounler.html"><img src="../images/vtool/logo.png" class="macapp" /></a></p>
+<h2>vTool</h2>
+<p><a href="vtool.html">vTool</a> is a small GUI frontend of FFmpeg for macOS. A small video manipulating util developed to help people deal with all kinds of video files in daily life easy and simple. With help of it, extract audio from video, scale video, crop video, merge multiple video files together, and convert video file format, can be accomplished by several clicks. </p>
+</div> <!-- col-md-4-->
+
 <div class="col-md-4">
 <p><a href="sounler.html"><img src="../images/sounler/logo.png" class="macapp" /></a></p>
 <h2>Sounler</h2>
@@ -48,15 +55,18 @@
 </div> <!-- col-md-4-->
 
 
+</div><!-- row -->
+
+
+<div class="row">
+
 <div class="col-md-4">
 <p><a href="mathHelfer.html"><img src="../images/MathHelfer/logo.png" class="macapp" /></a></p>
 <h2>MathHelfer</h2>
 <p><a href="mathHelfer.html"><b>MathHelfer</b></a> is an ultra lightweight word processor help you write well formatted science article in a very light and efficient way without install huge software packages such as TEX and Office Suite.</p>
 </div> <!-- col-md-4-->
-</div><!-- row -->
 
 
-<div class="row">
 <div class="col-md-4">
 <p><a href="littlefox.html"><img src="../images/littlefox/logo.png" class="macapp" /></a></p>
 <h2>LittleFox</h2>
@@ -67,41 +77,55 @@
 <div class="col-md-4">
 <p><a href="guard.html"><img src="../images/guard/guard7_logo.png" class="macapp" /></a></p>
 <h2>Guard7</h2>
-<p><a href="guard.html"><b>Guard7</b></a> is a cryptography tool used to protect your confidential information very simple and easy. It is an encryption and decryption system based on industry standard and was developed as the graphical frontend for the GNU Privacy Guard (GnuPG or GPG) on macOS with additional features.
-</p>
+<p><a href="guard.html"><b>Guard7</b></a> is a cryptography tool used to protect your confidential information very simple and easy. It is an encryption and decryption system based on industry standard and was developed as the graphical frontend for the GNU Privacy Guard (GnuPG or GPG) on macOS with additional features.</p>
 </div> <!-- col-md-4-->
 
-<div class="col-md-4">
-<p><a href="beak.html"><img src="../images/beak/beak_logo.png" class="macapp" /></a></p>
-<h2>Beak</h2>
-<p><a href="beak.html"><b>Beak</b></a> is a small utility used to reduce binary size of your software for embedded systems, and also an ultra small C and C++ obfuscator that used to encrypt source code of your software. 
-</p>
-</div> <!-- col-md-4-->
+
 </div><!-- row -->
 
 
 <div class="row">
+
+<div class="col-md-4">
+<p><a href="beak.html"><img src="../images/beak/beak_logo.png" class="macapp" /></a></p>
+<h2>Beak</h2>
+<p><a href="beak.html"><b>Beak</b></a> is a small utility used to reduce binary size of your software for embedded systems, and also an ultra small C and C++ obfuscator that used to encrypt source code of your software. </p>
+</div> <!-- col-md-4-->
+
+
 <div class="col-md-4">
 <p><a href="lyricsmaker.html"><img src="../images/lyricsmaker/logo.png" class="macapp" /></a></p>
 <h2>LyricsMaker</h2>
-<p><a href="lyricsmaker.html"><b>LyricsMaker</b></a> is a small tool that was designed to easily make lyrics sheet for music or generate subtitle for movie on macOS.
-</p>
+<p><a href="lyricsmaker.html"><b>LyricsMaker</b></a> is a small tool that was designed to easily make lyrics sheet for music or generate subtitle for movie on macOS.</p>
 </div> <!-- col-md-4-->
 
 
 <div class="col-md-4">
 <p><a href="uftp.html"><img src="../images/uftp/logo.png" class="macapp" /></a></p>
 <h2>uFTP Server</h2>
-<p><a href="uftp.html"><b>uFTP Server</b></a> is a very simple personal FTP Server designed for macOS without any user authentication, without complex and boring configuration, but still has very high performance.
-</p>
+<p><a href="uftp.html"><b>uFTP Server</b></a> is a very simple personal FTP Server designed for macOS without any user authentication, without complex and boring configuration, but still has very high performance.</p>
 </div> <!-- col-md-4-->
+
+
+</div><!-- row -->
+
+<div class="row">
 
 <div class="col-md-4">
 <p><a href="taihaa.html"><img src="../images/Taihaa/logo.png" class="macapp" /></a></p>
 <p><a href="taihaa.html"><b>Taihaa</b></a> is a fate telling app. It's a high precision fate analysis engine and high accuracy fate telling app designed for embedded systems that can be developed as standalone machine or handheld device. Consumers only needs to scan the CR code with their mobile phone and then the machine can print beautifully fate analysis report.</p>
 </div> <!-- col-md-4-->
-</div><!-- row -->
 
+<div class="col-md-4">
+<p></p>
+</div> <!-- col-md-4-->
+
+<div class="col-md-4">
+<p></p>
+</div> <!-- col-md-4-->
+
+
+</div><!-- row -->
 
 
 <hr>
