--- a/en/apps.html
+++ b/en/apps.html
@@ -36,7 +36,7 @@
 <div class="row">
 
 <div class="col-md-4">
-<p><a href="sounler.html"><img src="../images/vtool/logo.png" class="macapp" /></a></p>
+<p><a href="vtool.html"><img src="../images/vtool/logo.png" class="macapp" /></a></p>
 <h2>vTool</h2>
 <p><a href="vtool.html">vTool</a> is a small GUI frontend of FFmpeg for macOS. A small video manipulating util developed to help people deal with all kinds of video files in daily life easy and simple. With help of it, extract audio from video, scale video, crop video, merge multiple video files together, and convert video file format, can be accomplished by several clicks. </p>
 </div> <!-- col-md-4-->
