--- a/en/debugger.html
+++ b/en/debugger.html
@@ -31,7 +31,7 @@
   _\ \/ _ \/ -_) _ `/ __/ -_)
  /___/ .__/\__/\_,_/_/  \__/
     /_/
-Speare Pro v1.2.102
+Speare Pro v1.2.104
 The free small IDE for scripting languages.
 (c) 2020 http://www.sevenuc.com
 </pre></p>
@@ -45,6 +45,10 @@ The free small IDE for scripting languages.
 <p><a href="https://apps.apple.com/us/app/speare-pro/id1477773605?mt=12" target="_blank" class="appstore_download_link">
 <img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br>
 <p>If you can't open the link above, please launch App Store and found <lt>"Speare pro"</lt> by searching.</p>
+
+<p><a href="../images/speare/debug_sqlite_with_speare_code_editor.png" target="_blank"><img src="../images/speare/debug_sqlite_with_speare_code_editor.png" class="screenshots"/></a><br>
+Screenshot of debugging <a href="https://sqlite.org/" target="_blank">SQLite</a> source code in Speare code editor.
+</p>
 
 
 <h2>Debug Mode</h2>
