--- a/en/speare.html
+++ b/en/speare.html
@@ -26,7 +26,7 @@
 
     <div class="jumbotron">
         <p><img src="../images/speare/logo.png" style="width: 120px;" /></p>
-        <h1>Speare<br><em>Version 1.2.102 </em></h1>
+        <h1>Speare<br><em>Version 1.2.104 </em></h1>
         <p class="greenbig">The free small IDE for scripting languages.</p>
         <p class="lead">
 <a href="http://www.sevenuc.com/en/speare.html">Speare code editor</a> is a small, free and friendly code editor, and a really ultra light IDE (less than 7MB). You can use it to edit all kinds of text file, programming and debugging with almost all common programming languages. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements and easily to add a new programming language in it. Speare code editor includes <a href="debugger.html" target="_blank">builtin debugging environment</a> for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give you complete freedom to control and customise a debugging environment for any programming language.</p>
@@ -37,6 +37,11 @@
 <p><a href="https://apps.apple.com/us/app/speare/id1473902558?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a><br><br><br><br></p>
 
 <p>If you can't open the link above, please launch App Store and found Speare by searching. <span class="green">Please kindly donate the author</span> by purchasing <a href="debugger.html" target="_blank">the pro version</a>, your donation will drive me to continually improve it, or please recommend this app on your blog or rate this app so that helping other people can more easily find it.</p>
+
+
+<p><a href="../images/speare/debug_sqlite_with_speare_code_editor.png" target="_blank"><img src="../images/speare/debug_sqlite_with_speare_code_editor.png" class="screenshots"/></a><br>
+Screenshot of debugging <a href="https://sqlite.org/" target="_blank">SQLite</a> source code in Speare code editor.
+</p>
 
 
 <h2 class="dark">What's new</h2>
