--- a/en/speare.html
+++ b/en/speare.html
@@ -50,8 +50,12 @@ Screenshot of debugging <a href="https://sqlite.org/" target="_blank">SQLite</a>
 </p>
 
 
-<h2>Fast editing source code files in big project</h2>
-<p>Drag a folder into Speare code editor from Finder never mind how big it is and then edit source code files never mind what programming language they were written! Speare code editor can provide you the relations between the symbol definitions almost in real time!</p>
+<h2>Fast edit several files separately</h2>
+<p>Just drag the file one by one from Finder and drop into workspace, edit them and then right-click to "Remove All".</p>
+
+
+<h2>Fast edit several files in big folder</h2>
+<p>Just drag the folder into workspace never mind how big it is and then edit several files never mind what the programming language they were written, fast editing them with the <b>"Auto-completion"</b> feature provided by Speare code editor.</p>
 
 
 <h2>Code editor on iPad</h2>
