--- a/en/speare.html
+++ b/en/speare.html
@@ -26,7 +26,7 @@
 
     <div class="jumbotron">
         <p><img src="../images/speare/logo.png" style="width: 120px;" /></p>
-        <h1>Speare<br><em>Version 1.2.104 </em></h1>
+        <h1>Speare<br><em>Version 1.2.105 </em></h1>
         <p class="greenbig">The free small IDE for scripting languages.</p>
         <p class="lead">
 <a href="http://www.sevenuc.com/en/speare.html">Speare code editor</a> is a small, free and friendly code editor, and a really ultra light IDE (less than 7MB). You can use it to edit all kinds of text file, programming and debugging with almost all common programming languages. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements and easily to add a new programming language in it. Speare code editor includes <a href="debugger.html" target="_blank">builtin debugging environment</a> for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give you complete freedom to control and customise a debugging environment for any programming language.</p>
@@ -162,6 +162,17 @@ Screenshot of debugging <a href="https://sqlite.org/" target="_blank">SQLite</a>
 <p>Speare code editor helps end user to understand an existing code base by powerful code browser and call routines tracing functions. Speare code editor parses source code files and maintains the database of symbol definitions instantly while user editing, and presents useful contextual information to user automatically. It also use persistent bookmarks to remember key locations within functions or classes and their references. End user can quickly navigate function calls and callers and find references to variable, function or class instantly.</p>
 
 
+<h2>Productive helps to fast find editing points</h2>
+<p>1. Click toolbar "Functions" to fast find the location of function definitions.<br>
+2. Click toolbar "Breakpoints" to fast find the bookmarks placed for editing locations.<br>
+3. Search symbol references and fast find the location of the reference points, do this for current file can improve productivity too.<br>
+4. Fast click leftmost or rightmost of the opened tabs, or drag tab to rearrange position of editing files.<br>
+5. Drag file in the workspace to rearrange its position.<br>
+6. Search files by filename in the workspace.<br>
+7. Use "Jump To Definition" to find the reference points, and click "Back" to return to jump point.<br>
+</p>
+
+
 <h2>Lite Mode</h2>
 <p>Click <span><img src="../images/speare/left.png" class="button" /></span> siding button on toolbar and then click menu "View → Hide Toolbar".<br>
 "Lite Mode" can turn Speare to be a TextEdit-like text editor but has more features, such as line number display, syntax highlighting etc. "Lite Mode" can be remembered and continually keeping, it can be turned off by click menu "View → Show Toolbar". This function is useful and feels more light when open and edit several files but not work on a project that has large number of files.
@@ -194,7 +205,10 @@ AMPL ASM ASP <gr>AWK</gr> Ada <gr>ActionScript</gr> Active4D AnsiblePlaybook Ant
 <p><b>Speare is very fast!</b><br> Speare developed with pure Cocoa and C components that made it completely different with Javascript & Chromium based on IDE that large number of junk filled inside them, pure native frameworks and C modules made it small, efficient and has ability to leverage all native platform builtin features, e.g. Spell and grammar check, font and text format, unlimited undo, text to speak etc.</p>
 -->
 
-<br><br>
+<p><b>Crafting software as small as possible!</b></p>
+
+
+
 <h2>Support</h2>
 <p>If your special programming language, compiler, interpreter or special document type requires Spear syntax highlighting or debugging support, please drop us a message. </p>
 <p>Please kindly report your feature request or issue on OSDN or Github: <br>
@@ -202,8 +216,9 @@ AMPL ASM ASP <gr>AWK</gr> Ada <gr>ActionScript</gr> Active4D AnsiblePlaybook Ant
 <img src="../images/github-logo.png" style="height:24px;width: auto;"><a href="https://github.com/chengdu/Speare" target="_blank">https://github.com/chengdu/Speare.</a></p>
 
 
-<p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
 
+
+<p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
 
 <p><br><br><br><br></p>
 
