--- a/en/debugger.html
+++ b/en/debugger.html
@@ -31,7 +31,7 @@
   _\ \/ _ \/ -_) _ `/ __/ -_)
  /___/ .__/\__/\_,_/_/  \__/
     /_/
-Speare Pro v1.2.104
+Speare Pro v1.2.105
 The free small IDE for scripting languages.
 (c) 2020 http://www.sevenuc.com
 </pre></p>
@@ -145,8 +145,8 @@ If you can't write quality C code, that means you're not a real programmer. Most
 </p>
 
 
-
-<p>Crafting software as small as possible!</p>
+<p><b>Crafting software as small as possible!</b></p>
+<p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
 
 
 <div class="row">
