--- a/en/lyricsmaker.html
+++ b/en/lyricsmaker.html
@@ -25,8 +25,8 @@
 <div class="container-fluid">
 
     <div class="jumbotron">
-        <p><img src="../images/littlefox/logo.png" style="width: 120px;" /></p>
-        <h1>LyricsMaker<br><em>Version 1.5.14</em></h1>
+        <p><img src="../images/lyricsmaker/logo.png" style="width: 120px;" /></p>
+        <h1>LyricsMaker<br><em>Version 1.2</em></h1>
         <p class="greenbig">The designedly util to make lyrics sheets easy.</p>
         <p class="lead"><b>LyricsMaker</b> is a small util that was designed to conveniently make lyrics sheet for music or generate subtitle for movie, and later them can be easily synthesised by <a href="littlefox.html">LitterFox</a>. It do one thing in a simple way, i.e, listen audio or watch video and make time marks by simple clicks.</p>
     </div>
