--- a/en/debugger.html
+++ b/en/debugger.html
@@ -31,13 +31,13 @@
   _\ \/ _ \/ -_) _ `/ __/ -_)
  /___/ .__/\__/\_,_/_/  \__/
     /_/
-Speare Pro v1.2.106
+Speare Pro v1.2.200
 The free small IDE for scripting languages.
 (c) 2020 http://www.sevenuc.com
 </pre></p>
         <h1></h1>
         <p class="lead">
-        <a href="speare.html" target="_blank">Speare code editor</a> is a small, free and friendly code editor, and a really ultra light IDE (less than 7MB). You can use it to edit all kinds of text file, programming and debugging with almost all common programming languages. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements and easily to add a new programming language in it. Speare code editor includes builtin debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give you complete freedom to control and customise a debugging environment for any programming language.
+        <a href="speare.html" target="_blank">Speare code editor</a> is a small, free and friendly code editor, and a really ultra light IDE (less than 7MB). You can use it to edit all kinds of text file, programming and debugging with almost all common programming languages. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements and easily to add a new programming language in it. Speare code editor includes built-in debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give you complete freedom to control and customise a debugging environment for any programming language.
         </p>
     </div>
     
@@ -64,7 +64,7 @@ You can set the socket communication port number both used by Debug Server and t
 <span class="warning">Please remember to empty the port number when you switched to debugging with the default builtin programming languages with default port number.</span>
 </p>
 <p>4. Watches:<br>
-Watches used to evaluate variable or expression and their values can be realtime showing in stackview when debugging session paused, the nodes normally has a green colour and always placed on the top of stackview.
+Watches used to evaluate variable or expression and their values can be real-time showing in stack-view when debugging session paused, the nodes normally has a green colour and always placed on the top of stack-view.
 </p>
 
 <span class="warning">Caution: </span><br>
@@ -74,7 +74,7 @@ Watches used to evaluate variable or expression and their values can be realtime
 
 <h2>Debugger Architecture</h2>
 <a href="../images/speare/debugger.png" target="_blank"><img src="../images/speare/debugger.png" class="screenshots"/></a><br>
-<p><lt>An free small IDE for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.</lt></p>
+<p><lt>A free small IDE for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.</lt></p>
 <p>Proposed debugging environment support in Speare code editor are: GDB, LLDB, Ruby, mruby, Lua, Python, Perl, PHP, Tcl, Node.js, Dart, AWK and shell. Speare code editor provides very concise and simple interface to add new programming language in it, end user can very easily write a new programming language parser, syntax highlighting, code formatter and debugger for it, please refer this guide: <a href="http://www.sevenuc.com/download/language_extension_protocol.pdf" target="_blank">language_extension_protocol.pdf</a>.</p>
 
 <h2>Debugging code with Speare code editor</h2>
