--- a/en/speare.html
+++ b/en/speare.html
@@ -26,10 +26,10 @@
 
     <div class="jumbotron">
         <p><img src="../images/speare/logo.png" style="width: 120px;" /></p>
-        <h1>Speare<br><em>Version 1.2.106 </em></h1>
+        <h1>Speare<br><em>Version 1.2.200 </em></h1>
         <p class="greenbig">The free small IDE for scripting languages.</p>
         <p class="lead">
-<a href="http://www.sevenuc.com/en/speare.html">Speare code editor</a> is a small, free and friendly code editor, and a really ultra light IDE (less than 7MB). You can use it to edit all kinds of text file, programming and debugging with almost all common programming languages. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements and easily to add a new programming language in it. Speare code editor includes <a href="debugger.html" target="_blank">builtin debugging environment</a> for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give you complete freedom to control and customise a debugging environment for any programming language.</p>
+<a href="http://www.sevenuc.com/en/speare.html">Speare code editor</a> is a small, free and friendly code editor, and a really ultra light IDE (less than 7MB). You can use it to edit all kinds of text file, programming and debugging with almost all common programming languages. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements and easily to add a new programming language in it. Speare code editor includes <a href="debugger.html" target="_blank">built-in debugging environment</a> for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give you complete freedom to control and customise a debugging environment for any programming language.</p>
     </div>
     
 
@@ -167,7 +167,7 @@ Screenshot of debugging <a href="https://sqlite.org/" target="_blank">SQLite</a>
 2. Click toolbar "Breakpoints" to fast find the bookmarks placed for editing locations.<br>
 3. Search symbol references and fast find the location of the reference points, do this for current file can improve productivity too.<br>
 4. Fast click leftmost or rightmost of the opened tabs, or drag tab to rearrange position of editing files.<br>
-5. Drag file in the workspace to rearrange its position.<br>
+5. Drag file or folder in workspace to rearrange its position.<br>
 6. Search files by filename in the workspace.<br>
 7. Use "Jump To Definition" to find the reference points, and click "Back" to return to jump point.<br>
 </p>
@@ -202,7 +202,7 @@ AMPL ASM ASP <gr>AWK</gr> Ada <gr>ActionScript</gr> Active4D AnsiblePlaybook Ant
 
 <!--
 <h2>Techniques Inside</h2>
-<p><b>Speare is very fast!</b><br> Speare developed with pure Cocoa and C components that made it completely different with Javascript & Chromium based on IDE that large number of junk filled inside them, pure native frameworks and C modules made it small, efficient and has ability to leverage all native platform builtin features, e.g. Spell and grammar check, font and text format, unlimited undo, text to speak etc.</p>
+<p><b>Speare is very fast!</b><br> Speare developed with pure Cocoa and C components that made it completely different with Javascript & Chromium based on IDE that large number of junk filled inside them, pure native frameworks and C modules made it small, efficient and has ability to leverage all native platform built-in features, e.g. Spell and grammar check, font and text format, unlimited undo, text to speak etc.</p>
 -->
 
 <p><b>Crafting software as small as possible!</b></p>
