--- a/en/speare.html
+++ b/en/speare.html
@@ -39,8 +39,8 @@
 <p>If you can't open the link above, please launch App Store and found Speare by searching. <span class="green">Please kindly donate the author</span> by purchasing <a href="debugger.html" target="_blank">the pro version</a> or other app developed by the author, your donation will drive the author to continually improve it, or please kindly recommend this app on your blog or rate this app so that helping other people can more easily find it.</p>
 
 
-<p><a href="../images/speare/debug_sqlite_with_speare_code_editor.png" target="_blank"><img src="../images/speare/debug_sqlite_with_speare_code_editor.png" class="screenshots"/></a><br>
-Screenshot of debugging <a href="https://sqlite.org/" target="_blank">SQLite</a> source code in Speare code editor.
+<p><a href="../images/speare/LLVM_in_Speare.png" target="_blank"><img src="../images/speare/LLVM_in_Speare.png" class="screenshots"/></a><br>
+Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare code editor.
 </p>
 
 
