--- a/en/metalogic.html
+++ b/en/metalogic.html
@@ -26,7 +26,7 @@
 <div class="container-fluid">
     <div class="jumbotron">
         <p><img src="../images/metalogic/logo.png" style="width: 120px;" /></p>
-        <h1> MetaLogic <br><em>Version 1.0</em></h1>
+        <h1> MetaLogic <br><em>Version 1.1</em></h1>
         <p class="greenbig"><em>The productive util used to organise programming assets.</em></p>
         <p class="lead"><b>MetaLogic</b> is a small util developed to effectively manage programming assets, include shell snippets, code blocks, sample code files, libraries, packages, Web links and other resources. It's also a powerful util used to classify and organise programing resource by topics, categories, functions, programming languages, key words etc. MetaLogic help people organise large amount of programming resources in a very flexible way, and has complete freedom to define all kinds of metadata fields for management of classification and organisation.</p>
     </div>
@@ -50,17 +50,17 @@
 <p><ul>
 <li>Built-in full featured code editor.</li>
 <li>Support almost all common programming language syntax highlighting.</li>
-<li>Cascading style meta fields organisation and management.</li>
-<li>Organise arbitrary contains relation of meta fields by drag and drop.</li>
-<li>Apply logical operation on any meta field, and processing arbitrary combine operations.</li>
-<li>Organise thousands of files by metadata, such as topic, category, self-defined tags etc.</li>
+<li>Tree style meta fields organisation and management. Fast, intuitive and simple.</li>
+<li>Organise arbitrary contains relation of meta fields by drag and drop operation in meta fields tree.</li>
+<li>Powerful database query by processing arbitrary combined logical operations. </li>
+<li>Precise logical operation on any meta field, and their arbitrary combined logical operations.</li>
+<li>Organise thousands of files by metadata, such as topic, category, function, self-defined tags etc.</li>
 <li>Unlimited self-defined meta fields management.</li>
-<li>Powerful database query by combining of logical operations. Fast, intuitive and simple.</li>
-<li>Bookmarks management.</li>
-<li>Favourites management.</li>
-<li>Database can be switched.</li>
+<li>Persisted bookmarks to fast locate lines in code blocks.</li>
+<li>Favourites used to reduce query scope.</li>
+<li>Database can be switched for exchange purpose or storage extension etc.</li>
 <li>Support self-defined colour scheme.</li>
-<li>Export report with the queried results from database.</li>
+<li>Export report of the queried results from database.</li>
 <li>Ultra lightweight.</li>
 </ul></p>
 
